# unigateway

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_v1.2.0.md  Cargo.toml  README.md  install.sh
Formula/: ug.rb
docs/: README.md  admin-refactor-plan.md  app-modules-flat.md  architecture.md  cli-design.md  config-file-format.md  detailed-architecture-analysis.md  directory-structure.md  llm-connector-responses-requirements.md  personal-ai-user-architecture.md  personal-ai-user-development-plan.md  priority-scenarios-and-user-analysis.md  progress.md  project-architecture.md  refactor-summary.md  unigateway-core-api-draft.md  unigateway-core-implementation-plan.md  unigateway-core-phase0-checklist.md  unigateway-core-phase1-task-sheet.md  usage-scenarios-and-routing-design.md
scripts/: test-deepseek-minimax.sh  test-moonshot.sh
skills/: SKILL.md  openapi.yaml
src/: api_key.rs  app.rs  authz.rs  cli.rs  config.rs  dto.rs  gateway.rs  host_adapter.rs  lib.rs  main.rs  (+12 more)
unigateway-core/: Cargo.toml
unigateway-core/src/: conversion.rs  drivers.rs  engine.rs  error.rs  hooks.rs  lib.rs  pool.rs  request.rs  response.rs  retry.rs  routing.rs
unigateway-core/src/engine/: aimd.rs  execution.rs  mod.rs  reporting.rs  tests.rs
unigateway-core/src/engine/execution/: chat.rs  embeddings.rs  responses.rs
unigateway-core/src/engine/tests/: retries.rs  routing.rs  support.rs
unigateway-core/src/protocol/: anthropic.rs  openai.rs
unigateway-core/src/protocol/anthropic/: requests.rs  tests.rs
unigateway-core/src/protocol/openai/: requests.rs  streaming.rs  tests.rs
(+130 files in other folders)
