[package]
name = "unigateway-core"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "Core in-memory LLM proxy and scheduling engine for UniGateway"
repository = "https://github.com/EeroEternal/unigateway"

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"